# bleacho

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: arguments.cpp  arguments.h  main.cpp
src/socketservers/: httpServer.cpp  httpServer.h  tcpServer.cpp  tcpServer.h
src/structs/: userLoginData.h
